Fix queryselector issue. center/align end game content

--- a/style.css
+++ b/style.css
@@ -62,6 +62,13 @@ body {
     font-weight: bolder;
 }
 
+.end-game {
+    display:flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .footer {
     text-align: center;
 }
